# altered_harvester

./: Cargo.toml  IMPLEMENTATION_RESULTS.md  OPTIMIZATION_IMPLEMENTATION_REPORT.md  altered_all_cards.json  altered_cards.fb  altered_cards_optimized_v2.fb  altered_cards_optimized_v2.fb.lz4  altered_optimized.json  build.rs  cards_json_optimization_proposal.md  sample_delta_v2.0.0_to_v2.0.1.json  test_optimizations.sh
benches/: format_benchmark.rs
schema/: cards.fbs  cards_optimized.fbs
src/: cards_generated.rs  delta_manager.rs  main.rs  optimizer.rs  optimizer_v2.rs
