[package]
name = "altered_harvester"
version = "0.1.0"
edition = "2021"

[dependencies]
# For making HTTP requests
reqwest = { version = "0.12", features = ["blocking", "json"] }
# For handling URLs
url = "2.5"
# For JSON serialization and deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# For timestamps
chrono = { version = "0.4", features = ["serde"] }
# For FlatBuffers
flatbuffers = "2.0"

[build-dependencies]
# Required for build script